# vk-ml-2023-1

./: CMakeLists.txt  Makefile  README.md  main.cpp  test_file  utilities.cpp  utilities.hpp
include/: error_codes.hpp  ioperation.hpp  parser.hpp  utilities.hpp
src/: ioperation.cpp  main.cpp  parser.cpp  utilities.cpp  utilities.hpp
